# MAI-spring-2025

./: .env.template  .gitignore  Dockerfile  Dockerfile-filebeat  Dockerfile-pg  README.md  changelog.xml  db.py  docker-compose.yml  go.mod  main.go  main.py  orders.py  params.json  requirements.txt  setup.sh  test3.txt
dbt/: .user.yml
dbt/online_store/: .user.yml  (+2 more)
initdb/: 01-create-hive-user.sh  02-create-superset-user.sh  03-create-backend-user.sh  04-init-extensions.sh  05-init-backend-shecma.sh
migartions/: init.sql
migrations/: 001_init.sql
scripts/: data_generation.py  open_search_log_test.py
services/auth/: .env.template  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
services/auth/src/apps/: __init__.py
services/auth/src/apps/auth/: depends.py  handlers.py  managers.py  named_tuples.py  routes.py  schemas.py  services.py  tasks.py  utils.py
services/auth/src/core/: __init__.py  celery_config.py  logger.py  settings.py
services/auth/src/core/core_dependency/: db_dependency.py  redis_dependency.py
services/auth/src/database/alembic/: env.py
services/auth/src/database/alembic/versions/: 2025_05_21_1706-2b9e15d0ddeb_create_user_table.py
services/auth/src/database/mixins/: id_mixins.py  timestamp_mixins.py
services/auth/src/database/models/: __init__.py  user.py
services/auth/src/shop/: main.py
services/auth/src/templates/: confirmation_email.html
services/products/: .dockerignore  .env.template  Dockerfile  pyproject.toml
services/products/app/: crud.py  database.py  dependencies.py  logger.py  main.py  models.py  routers.py  schemas.py
(+36 files in other folders)
